@@ -8,6 +8,7 @@
     * New display type 'boxes-omit-root' for BI views
     * Hostgroup view BI Boxes omits the root level
     * Finalized layout if view options and commands/filters/painteroptions.
+    * FIX: remove nasty JS error in sidebar
 
     Mobile:
     * FIX: Fixed logtime filter settings in all mobile views
